--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "1.0.0"
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
