Fixed huffman code

--- a/Project.toml
+++ b/Project.toml
@@ -8,4 +8,5 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ResumableFunctions = "c5292f4c-5179-55e1-98c5-05642aab7184"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
