--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,4 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ResumableFunctions = "c5292f4c-5179-55e1-98c5-05642aab7184"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
